# Heta_Framework

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pypi-publish.yml
docs/: index.en.md  index.md  index.zh.md  quick-start.en.md  quick-start.zh.md
docs/core-components/evaluation/: beir.en.md  beir.zh.md  benchmark-protocols.en.md  benchmark-protocols.zh.md  benchmark-runner.en.md  benchmark-runner.zh.md  evaluation-reports.en.md  evaluation-reports.zh.md  evaluators.en.md  evaluators.zh.md  multihop-rag.en.md  multihop-rag.zh.md  uda-benchmark.en.md  uda-benchmark.zh.md
docs/core-components/knowledge-base/: knowledge-base-builder.en.md  knowledge-base-builder.zh.md  knowledge-base.en.md  knowledge-base.zh.md  knowledge-recipe.en.md  knowledge-recipe.zh.md
docs/core-components/models/: embeddings.en.md  embeddings.zh.md  language-models.en.md  language-models.zh.md  rerankers.en.md  rerankers.zh.md
docs/core-components/parsers/: document-parsers.en.md  document-parsers.zh.md
docs/core-components/procedures/: knowledge-procedures.en.md  knowledge-procedures.zh.md
docs/core-components/search/: full-text-search.en.md  full-text-search.zh.md  heta-graph-search.en.md  heta-graph-search.zh.md  heta-query-modes.en.md  heta-query-modes.zh.md  keyword-search.en.md  keyword-search.zh.md  query-protocols.en.md  query-protocols.zh.md  vector-search.en.md  vector-search.zh.md
docs/core-components/steps/: build-graph.en.md  build-graph.zh.md  deduplicate-entities.en.md  deduplicate-entities.zh.md  deduplicate-relations.en.md  deduplicate-relations.zh.md  embed-chunks.en.md  embed-chunks.zh.md  extract-entities.en.md  extract-entities.zh.md  extract-relations.en.md  extract-relations.zh.md  index-full-text.en.md  index-full-text.zh.md  index-vectors.en.md  index-vectors.zh.md  merge-chunks.en.md  merge-chunks.zh.md  merge-graph-into-store.en.md  merge-graph-into-store.zh.md  parse-documents.en.md  parse-documents.zh.md  persist-chunks.en.md  persist-chunks.zh.md  rechunk-documents.en.md  rechunk-documents.zh.md  split-documents.en.md  split-documents.zh.md  step-protocols.en.md  step-protocols.zh.md
docs/core-components/stores/: graph-stores.en.md  graph-stores.zh.md  object-stores.en.md  object-stores.zh.md  sql-stores.en.md  sql-stores.zh.md  text-index-stores.en.md  text-index-stores.zh.md  vector-stores.en.md  vector-stores.zh.md
docs/development/: knowledge-base-design.en.md  knowledge-base-design.zh.md
docs/examples/: home_benchmark_case.en.py  home_benchmark_case.py  home_full_text_case.en.py  home_full_text_case.py  home_graph_case.en.py  home_graph_case.py  home_vector_case.en.py  home_vector_case.py
docs/guides/: choose-build-path.en.md  choose-build-path.zh.md  evaluate-recipe.en.md  evaluate-recipe.zh.md  load-delete-knowledge-base.en.md  load-delete-knowledge-base.zh.md  query-knowledge-base.en.md  query-knowledge-base.zh.md  what-is-recipe.en.md  what-is-recipe.zh.md
docs/javascripts/: heta-home.js
docs/stylesheets/: heta-home.css
hooks/: copy_markdown.py
landing/: index.html  main.js  styles.css
src/heta_framework/: __init__.py
src/heta_framework/common/: README.md  __init__.py
src/heta_framework/common/extractors/: __init__.py  protocols.py  types.py
src/heta_framework/evaluation/: __init__.py  protocols.py  runner.py  types.py
src/heta_framework/kb/: README.md  __init__.py  builder.py  cleanup.py  components.py  knowledge_base.py  manifests.py  recipe.py  runtime.py  state.py  validation.py
tests/: dedup_alignment_smoke.py  live_model_matrix.py  test_beir_benchmark.py  test_build_graph_step.py  test_build_hirag_graph_step.py  test_build_lightrag_graph_step.py  test_community_report.py  test_deduplicate_graph_steps.py  test_elasticsearch_text_index_store.py  test_embed_index_steps.py  test_embeddings.py  test_evaluation_protocols.py  test_extract_entities_step.py  test_extract_hirag_graph_step.py  test_extract_lightrag_graph_step.py  test_extract_relations_step.py  test_extractors.py  test_full_text_step.py  test_graph_store.py  test_hirag_procedure_smoke.py  test_hirag_query_engine.py  test_html_parser.py  test_image_parser.py  test_knowledge_base_delete.py  test_knowledge_recipe_core.py  test_lightrag_procedure_smoke.py  test_lightrag_query_engine.py  test_live_graph_store_smoke.py  test_live_store_pipeline.py  test_live_vector_search_smoke.py  test_llms.py  test_llms_live.py  test_merge_graph_into_store_step.py  test_merge_rechunk_steps.py  test_milvus_vector_store.py  test_mineru_extractor.py  test_model_protocols.py  test_multihop_rag_benchmark.py  test_object_store.py  test_parse_documents_step.py  (+14 more)
tests/live_reports/: model_matrix.json
(+128 files in other folders)
