[build-system]
requires = [
    "setuptools==80.9.0",
    "wheel==0.45.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "heta-framework"
version = "0.1.0"
description = "Composable knowledge-base framework for building, searching, and evaluating RAG systems from recipes."
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "KnowledgeX Lab" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4==4.14.3",
    "httpx==0.28.1",
    "litellm==1.87.1",
    "python-calamine==0.6.2",
    "tiktoken==0.13.0",
]
keywords = [
    "ai-agent",
    "benchmark",
    "graph-rag",
    "knowledge-base",
    "llm",
    "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/KnowledgeXLab/Heta_Framework"
Documentation = "https://knowledgexlab.github.io/Heta_Framework/"
Repository = "https://github.com/KnowledgeXLab/Heta_Framework"
Issues = "https://github.com/KnowledgeXLab/Heta_Framework/issues"

[project.optional-dependencies]
json = [
    "json-repair==0.58.0",
]
test = [
    "pytest==9.0.2",
]
build = [
    "build==1.5.0",
    "twine==6.2.0",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocs-static-i18n==1.3.1",
    "pymdown-extensions==10.21",
]
milvus = [
    "pymilvus==2.6.11",
]
elasticsearch = [
    "elasticsearch[async]==9.4.1",
]
text-index = [
    "elasticsearch[async]==9.4.1",
]
sql = [
    "SQLAlchemy==2.0.50",
]
postgres = [
    "SQLAlchemy==2.0.50",
    "psycopg[binary]==3.3.4",
]
mysql = [
    "SQLAlchemy==2.0.50",
    "PyMySQL==1.2.0",
]
s3 = [
    "boto3==1.43.29",
]
dev = [
    "boto3==1.43.29",
    "build==1.5.0",
    "elasticsearch[async]==9.4.1",
    "json-repair==0.58.0",
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocs-static-i18n==1.3.1",
    "psycopg[binary]==3.3.4",
    "pymilvus==2.6.11",
    "pymdown-extensions==10.21",
    "PyMySQL==1.2.0",
    "pytest==9.0.2",
    "SQLAlchemy==2.0.50",
    "twine==6.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["heta_framework", "heta_framework.*"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-config",
    "--strict-markers",
]
markers = [
    "live: tests that require external services or live provider APIs",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "UP",
    "W",
]
ignore = [
    "B008",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
files = ["src/heta_framework", "tests"]
